@@ -61,7 +61,8 @@
                 <li py:if="hasWrite" py:attrs="{'class': (lastchunk in ('metadata', 'getMetadata')) and 'highlighted' or None}"><a href="metadata">Metadata</a></li>
                 <li py:if="hasWrite" py:attrs="{'class': (lastchunk in ('pgpAdminForm', 'pgpNewKeyForm')) and 'highlighted' or None}"><a href="pgpAdminForm">PGP Keys</a></li>
                 <li py:if="isAdmin" py:attrs="{'class': (lastchunk in ('userlist', 'chPassForm', 'addUserForm', 'addPermForm', 'editPermForm', 'manageGroupForm',)) and 'highlighted' or None}"><a href="userlist">Users and Groups</a></li>
-                <li py:if="not isAdmin and hasWrite" py:attrs="{'class': (lastchunk in ('chPassForm', )) and 'highlighted' or None}"><a href="chPassForm">Change Password</a></li>
+                <li py:if="not isAnonymous" py:attrs="{'class': (lastchunk in ('chPassForm', )) and 'highlighted' or None}"><a href="chPassForm">Change Password</a></li>
+                <li py:if="hasEntitlements" py:attrs="{'class': (lastchunk in ('manageEntitlements', 'manageEntitlementForm', 'addEntitlementForm', 'addEntGroupForm')) and 'highlighted' or None}"><a href="manageEntitlements">Manage Entitlements</a></li>
             </ul>
             <ul class="menu submenu">&nbsp;</ul>
             <div class="layout" py:replace="item[:]" />
